--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "badjokes",
+  "homepage" : "http://wgoode3.github.io/badjokes",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
